Fix: Corregir validaciones